src/snapshots/tests__fof_and_formula.snap
---
source: src/tests.rs
expression: parsed
---
FofAndFormula(
    [
        Unitary(
            Atomic(
                Plain(
                    FofPlainAtomicFormula(
                        Constant(
                            Constant(
                                Functor(
                                    Lower(
                                        LowerWord(
                                            "p",
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
        Unitary(
            Atomic(
                Plain(
                    FofPlainAtomicFormula(
                        Constant(
                            Constant(
                                Functor(
                                    Lower(
                                        LowerWord(
                                            "q",
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ],
)
