src/snapshots/tests__fof_annotated-2.snap
---
source: src/tests.rs
expression: parsed
---
Fof(
    LowerWord(
        "test",
    ),
    Axiom,
    Boolean(
        true,
    ),
    Some(
        Annotations {
            source: Unknown,
        },
    ),
)
