src/snapshots/tests__fof_annotated-3.snap
---
source: src/tests.rs
expression: parsed
---
FofAnnotated {
    name: AtomicWord(
        Lower(
            LowerWord(
                "test",
            ),
        ),
    ),
    role: Axiom,
    formula: Logic(
        Unitary(
            Atomic(
                Defined(
                    Plain(
                        FofDefinedPlainFormula(
                            Constant(
                                DefinedConstant(
                                    DefinedFunctor(
                                        AtomicDefinedWord(
                                            DollarWord(
                                                LowerWord(
                                                    "true",
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
    annotations: Annotations(
        Some(
            (
                Source(
                    Data(
                        Atomic(
                            Lower(
                                LowerWord(
                                    "unknown",
                                ),
                            ),
                        ),
                    ),
                ),
                OptionalInfo(
                    None,
                ),
            ),
        ),
    ),
}
