src/snapshots/tests__fof_annotated-5.snap
---
source: src/tests.rs
expression: parsed
---
FofAnnotated {
    name: AtomicWord(
        Lower(
            LowerWord(
                "test",
            ),
        ),
    ),
    role: Axiom,
    formula: FofFormula(
        Unitary(
            Atomic(
                Defined(
                    Plain(
                        FofDefinedPlainFormula(
                            FofDefinedPlainTerm(
                                DefinedConstant(
                                    DefinedFunctor(
                                        AtomicDefinedWord(
                                            DollarWord(
                                                LowerWord(
                                                    "true",
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
    annotations: Annotations(
        Some(
            (
                Source(
                    Data(
                        Atomic(
                            Lower(
                                LowerWord(
                                    "unknown",
                                ),
                            ),
                        ),
                    ),
                ),
                OptionalInfo(
                    Some(
                        UsefulInfo(
                            GeneralList(
                                None,
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
}
