src/snapshots/tests__fof_annotated.snap
---
source: src/tests.rs
expression: parsed
---
Fof(
    LowerWord(
        "test",
    ),
    Axiom,
    Boolean(
        true,
    ),
    None,
)
