src/snapshots/tests__fof_arguments-3.snap
---
source: src/tests.rs
expression: parsed
---
FofArguments(
    [
        Variable(
            Variable(
                UpperWord(
                    "X",
                ),
            ),
        ),
    ],
)
