src/snapshots/tests__fof_arguments-5.snap
---
source: src/tests.rs
expression: parsed
---
FofArguments(
    [
        Variable(
            Variable(
                UpperWord(
                    "X",
                ),
            ),
        ),
        Function(
            Plain(
                Function(
                    Functor(
                        Lower(
                            LowerWord(
                                "f",
                            ),
                        ),
                    ),
                    FofArguments(
                        [
                            Variable(
                                Variable(
                                    UpperWord(
                                        "X",
                                    ),
                                ),
                            ),
                        ],
                    ),
                ),
            ),
        ),
    ],
)
