src/snapshots/tests__fof_arguments.snap
---
source: src/tests.rs
expression: parsed
---
FofArguments(
    [
        Function(
            Plain(
                Constant(
                    Functor(
                        Lower(
                            LowerWord(
                                "c",
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ],
)
