src/snapshots/tests__fof_atomic_formula-2.snap
---
source: src/tests.rs
expression: parsed
---
Infix(
    Equal,
    Functor(
        LowerWord(
            "f",
        ),
        [
            Variable(
                Variable(
                    "X",
                ),
            ),
        ],
    ),
    Variable(
        Variable(
            "Y",
        ),
    ),
)
