src/snapshots/tests__fof_atomic_formula-3.snap
---
source: src/tests.rs
expression: parsed
---
Predicate(
    LowerWord(
        "p",
    ),
    [
        Variable(
            Variable(
                "X",
            ),
        ),
    ],
)
