src/snapshots/tests__fof_atomic_formula-4.snap
---
source: src/tests.rs
expression: parsed
---
Infix(
    NotEqual,
    Variable(
        Variable(
            "X",
        ),
    ),
    Variable(
        Variable(
            "Y",
        ),
    ),
)
